update the app with name

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -2,7 +2,9 @@
 
 /* Basic reset */
 * { margin: 0; padding: 0; }
-
+a{
+  text-decoration: none;
+}
 /* Let Bootstrap theming control colors */
 body {
   display: block !important;
